--- a/Project-Alpha-Teem.csproj
+++ b/Project-Alpha-Teem.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="locations\SpidersForest\" />
+  </ItemGroup>
+
 </Project>
