Add ASCII art gallery and implement spider-related quests
- Introduced ascii_art.json for ASCII art representations.
- Created AsciiArtGallery class to load and display ASCII art.
- Implemented BeatGiantSpiderQuest and ForestSpiderBattleQuest for spider encounters.
- Updated CompleteSpiderSilkQuest and StartCollectSpiderSilkQuest for quest flow.
- Enhanced Player and Battle classes to handle new quest logic and player interactions.

--- a/Project-Alpha-Teem.csproj
+++ b/Project-Alpha-Teem.csproj
@@ -12,4 +12,10 @@
     <Folder Include="locations\SpidersForest\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="ascii_art.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
